* Merge https://gitea.pep.foundation/pEp.foundation/pEpEngine/pulls/138 (build
  fixes for ios, thanks to Dirk).

v3.2.0-RC24  2023-02-20
* log the current thread id along with the current process id.  When stuck on
  a backoff loop write a log line once every PEP_BACKOFF_TIMES_BEFORE_LOGGING
  failed attempts.
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/136 .

v3.2.0-RC23  2023-02-09
* some documentation updates: link build instructions from README.md .
* improve logging, in particular making it very visible when we discover that a
  key expired or was revoked.
* Give the asn en/de-coders a much bigger stack size by patching asn_internal.h
  .  This is a direct fix (thanks to Dirk) of a problem presumably already
  solved by rate-limitation; building with santisiers on ios should now be
  convenient again.
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/97 .
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/98 .
* Build system fixes to compile on Windows, contributed by Alex Sualdea and Jörg
  Knobloch.
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/123 .
* Incompatible API change: remove unused obj parameters from API functions
  do_sync_protocol and do_sync_protocol_step ; this change is easy to adjust to
  but will break every adapter.
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/126 .

v3.2.0-RC22  2023-02-01
* New API function PEP_STATUS_is_error.
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/111 .
* Avoid the use of #warning, not supported by the microsoft compiler.
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/122 .

v3.2.0-RC21  2023-02-01
* DEPENDENCIES: use the new pEpEngineSequoiaBackend release; this includes some
  build system improvements to which we Engine people contributed, making
  pEpEngineSequoiaBackend easy to install with make following the pEp
  conventions.